# USTC-webtools

./: .gitignore  README.md  decode_script.py  example.py  example_change_courses.py  example_select_courses.py  example_wait_courses.py  main.py  pyproject.toml  record_data.py  sign.py  temp.py  tempcode.py  test.py
jwc/: CourseSelect.py  Error.py  Login.py  __init__.py  const.py  utils.py
