[project]
name = "ustc-webtools"
version = "0.1.0"
description = "Useful webtools for University of Science and Technology of China"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jwc"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]
